# Cargo.toml

[package]
name = "triadchain"
version = "1.6.0"
edition = "2021"

[dependencies]
blake3 = "1.5.0" # Or your current blake3 version
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_bytes = "0.11"
thiserror = "1.0" # Add thiserror for custom error types
